--- a/style.css
+++ b/style.css
@@ -1,66 +1,93 @@
 body{
+    background-color: #000000;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     align-content: center;
+    text-align: center;
 }
 
 main {
     height: 200px;
     margin: 50px;
     width: 75%;
+    min-width: 300px;
     display: flex;
     flex-direction: column;
     align-content: space-around;
     justify-content: center;
     align-items: center;
+    text-align: center;
 }
 
 article {
     display: flex;
-    flex-direction: row-reverse;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
     width:fit-content;
-    height:fit-content;
-    padding: 10px;
+    min-width: 300px;
+    min-height: 20  0px;
+    margin: 0px;
+    padding-top: 10px;
+    padding-bottom: 10px;
     border-radius: 20px;
-    background-color: pink;
+    color: whitesmoke;
+    text-align: center;
+    background-color: #252525;
 }
 
 form {
     display:flex;
+    min-width: 200px;
     flex-direction: row;
     flex-wrap: wrap;
-    margin: 20px 20px;
+    margin: 8px 0px;
     color: whitesmoke;
-    background: gray;
+    background: #252525;
     border-radius: 20px;
     padding: 10px 30px;
     justify-content: space-around;
+    text-align: center;
 }
 
 input {
     border-radius: 20px;
     text-align: center;
+    color: whitesmoke;
+    background-color: #121212;
+    border: 0;
+    text-align: center;
+    outline: none;
+}
+
+input:selection { 
+    border: 0;
+    outline: none;
 }
 
 label {
     margin-left: 14px;
+    text-align: center;
 }
 
 .label_radio {
     margin-left: -1px;
+    text-align: center;
 }
 
 
 #input_peso {
     width: 80px;
     display: flexbox;
+    text-align: center;
 }
 
 #input_hospitalizado {
     background-color: pink;
     border: red;
+    display: none;
     }
 
 .input_hospitalizado_off {
