--- a/style.css
+++ b/style.css
@@ -67,8 +67,9 @@ footer {
 
 form {
     display:flex;
-    min-width: 200px;
-    flex-direction: row;
+    min-width: 100px;
+    max-width: 400px;
+    height: fit-content;
     flex-wrap: wrap;
     margin: 8px 0px;
     color: whitesmoke;
@@ -77,6 +78,15 @@ form {
     padding: 10px 30px;
     justify-content: space-around;
     text-align: center;
+    align-items: baseline;
+}
+
+.div_formulario {
+    display: flex;
+    flex: content;
+    width: 100%;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
 input {
@@ -97,17 +107,11 @@ input:selection {
 label {
     margin-left: 14px;
     text-align: center;
+    display: block
 }
 
 .label_radio {
     margin-left: -1px;
-    text-align: center;
-}
-
-
-#input_peso {
-    width: 80px;
-    display: flexbox;
     text-align: center;
 }
 
@@ -116,6 +120,10 @@ label {
     border: red;
     display: none;
     }
+
+.hospitalizado {
+    display: none !important;
+}
 
 .input_hospitalizado_off {
     display: none;
