FInalizado layout flex

--- a/style.css
+++ b/style.css
@@ -49,11 +49,11 @@ article {
     justify-content: center;
     align-items: center;
     width:fit-content;
-    min-width: 300px;
-    min-height: 20  0px;
-    margin: 0px;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    min-width: 200px;
+    max-width: 400px;
+    margin: 10px 0px;
+    padding-top: 15px;
+    padding-bottom: 15px;
     border-radius: 20px;
     color: whitesmoke;
     text-align: center;
@@ -103,16 +103,21 @@ input {
     outline: none;
 }
 
-input:selection { 
-    border: 0;
-    outline: none;
-}
 
 input[type="number"] {
-    width: 90px;
-    height: 20px;
+    width: 40px;
+    height: 30px;
+    margin-top: -8px;
     text-align: center;
     justify-content: center;
+    -moz-appearance: textfield;
+}
+
+/* Chrome, Safari, Edge, Opera  retirar botoes do input number*/
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
 
 input[type="range"] {
