--- a/style.css
+++ b/style.css
@@ -10,7 +10,9 @@ body{
 }
 
 .superOff {
-    display: none !important;
+    visibility: hidden !important;
+    transition: visibility 0s, opacity 0.5s linear;
+    opacity: 0;
 }
 
 header {
@@ -62,6 +64,10 @@ main {
     color: whitesmoke;
     text-align: center;
     background-color: #252525;
+    visibility: visible;
+    opacity: 1;
+    transition: margin 1.5s, visibility 0s, opacity 1.5s linear;
+
 }
 
 #resultado_an {
