--- a/style.css
+++ b/style.css
@@ -53,15 +53,17 @@ main {
 
 .resultado {
     display: flex;
+    flex-grow: 1 1 1;
+    flex-basis: auto;
     flex-direction: row;
+    align-items:flex-start;
     justify-content: center;
-    align-items: center;
     width:fit-content;
     min-width: 200px;
+    min-height: 3em;
     max-width: 400px;
     margin: 10px 10px;
-    padding-top: 15px;
-    padding-bottom: 15px;
+    padding: 3px 2%;
     border-radius: 20px;
     color: whitesmoke;
     text-align: center;
@@ -72,17 +74,10 @@ main {
 
 }
 
-#resultado_an {
-    display: flow-root;
-    width:fit-content;
-    min-width: 200px;
-    max-width: 400px;
-    margin: 10px 10px;
-    padding: 10px 10px;
-    border-radius: 20px;
-    color: whitesmoke;
-    text-align: center;
-    background-color: #252525;
+#resultado_instrucoes {
+    align-items: center;
+    align-self: center;
+    justify-self: center;
 }
 
 footer {
@@ -109,13 +104,9 @@ form {
     display: flex;
     flex: content;
     width: 100%;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: flex-start;
-    padding: 5px 0px 0px 20px;
-}
-
-label[for='input_peso'] {
-    margin-left: 30px;
+    padding: 0.5em 0.5em 0 0.5em;
 }
 
 input {
@@ -130,9 +121,10 @@ input {
 
 
 input[type="number"] {
-    width: 40px;
-    height: 30px;
+    width: 4em;
+    height: 1.5em;
     margin-top: -8px;
+    margin-left: 0.2em;
     text-align: center;
     justify-content: center;
     -moz-appearance: textfield;
@@ -162,17 +154,31 @@ input[type="radio"]:checked {
 }
 
 @keyframes animacao_radio {
-    from {border: 1px solid #555;}
-    to {border: 1px solid #7c7c7c;}
-    from {background-color: black;}
-    to {background-color: gray;}
+    from {
+        border: 1px solid #555;
+        background-color: black;
+    }
+    to {
+        border: 1px solid #7c7c7c;
+        background-color: gray;
+    }
+}
+
+.resultado h1 {
+    margin-top: 5px;
 }
 
 .resultados {
     display: flex;
+    max-width: 800px;
     justify-content: center;
     flex-wrap: wrap;
     align-items: stretch;
+    width: 100%;
+}
+
+.resultados p {
+    line-height: 0.6em;
 }
 
 /* Chrome, Safari, Edge, Opera  retirar botoes do input number*/
@@ -206,7 +212,7 @@ input[type="range"] {
 }
 
 ::-webkit-slider-thumb:hover {
-    background-color: #252525;
+    background-color: #7c7c7c;
     border: .2rem solid #7c7c7c;
     border-radius: 1rem;
     cursor: pointer;
@@ -218,12 +224,23 @@ input[type="range"] {
     border: .2rem solid white;
     border-radius: 1rem;
     cursor: pointer;
-    transition: all 1s;
+    transition: all 0.5s;
 }
 
 .label_radio {
+    margin: auto;
+    border-radius: 20px;
+    padding: 0px 10px;
     margin-left: -1px;
     text-align: center;
+    border: 1px dotted #252525;
+    transition: all 1s;
+}
+
+.label_radio:hover {
+    border: 1px solid #555;
+    background-color: #3b3b3b;
+    transition: all 3s;
 }
 
 #input_hospitalizado {
@@ -243,11 +260,6 @@ input[type="range"] {
 .input_hospitalizado_on {
     display: block;
 }
-
-#ml_salute_neb {
-    color: whitesmoke;
-}
-
 
 /* Popup container */
 .popup {
@@ -314,7 +326,7 @@ input[type="range"] {
     position: relative;
     display: inline-block;
     color: #fff;
-    animation: waviy 3s 1;
+    animation: waviy 1.2s 1;
     animation-delay: calc(.4s * var(--i));
 }
 
@@ -324,5 +336,16 @@ input[type="range"] {
     }
     20% {
     transform: translateY(-20px)
+    }
+}
+
+@media (max-width: 360px) {
+    body {
+        font-size: 0.8em;
+    }
+
+    input[type="number"] {
+        font-size: 0.8em;
+        height: 80%;
     }
 }
