--- a/style.css
+++ b/style.css
@@ -86,6 +86,7 @@ footer {
 
 form {
     display:flex;
+    flex-direction: column;
     max-width: 400px;
     height: fit-content;
     flex-wrap: wrap;
